se soluciono el probelma del frontend